// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/Oops.tsx > should render itself & its children - fallback to unknown error 1`] = `
<div>
  <div
    class="flex flex-1 flex-col items-center justify-center min-h-screen"
  >
    <div
      class="css-1rd5nai"
    >
      <div
        class="css-1ma91a4"
      >
        <span
          class="text-5xl"
        >
          <span>
            <img
              alt="🤔"
              class="emoji"
              draggable="false"
              src="/mock/images/assets/1f914.svg"
            />
          </span>
        </span>
        <span
          class="text-xl font-semibold"
        >
          Oops! Something went wrong
        </span>
        <div
          class="css-u5wwvt"
        >
          <span
            class="text-center"
          >
            Please try again later.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/Oops.tsx > should render itself & its children - specified error 1`] = `
<div>
  <div
    class="flex flex-1 flex-col items-center justify-center min-h-screen"
  >
    <div
      class="css-1rd5nai"
    >
      <div
        class="css-1ma91a4"
      >
        <span
          class="text-5xl"
        >
          <span>
            <img
              alt="🔥"
              class="emoji"
              draggable="false"
              src="/mock/images/assets/1f525.svg"
            />
          </span>
        </span>
        <span
          class="text-xl font-semibold"
        >
          Error title
        </span>
        <div
          class="css-u5wwvt"
        >
          <span
            class="text-center"
          >
            Error description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
